--- a/server/views/add_job.ejs
+++ b/server/views/add_job.ejs
@@ -39,26 +39,7 @@
         <div class="cache"></div>
 
         <!-- HEADER -->
-
-        <div id="wrapper-header">
-            <div id="main-header" class="object">
-                <div class="logo">
-                    Co.unity - <span id="title-description">helping your community help you</span>
-                    <!--            <img src="img/new/logo.svg" alt="logo platz" style="height: 20%;">-->
-
-                </div>
-
-                <a href="profile.html"><img id="profpic" src="img/new/profile-images/5.jpg"></a>
-                <div id="main_tip_search"> 
-                    <form>
-                        <input type="text" name="search" id="tip_search_input" list="search" autocomplete=off required>
-                    </form>
-                </div>
-
-                <div id="stripes"></div>
-                <a href="add-job.html"><button id="new-job" class="button">Add a job</button></a>
-            </div>
-        </div>
+        <%- include('navbar', { user: user }); %>
 
         <!-- PORTFOLIO -->
 
@@ -211,7 +192,7 @@
 <img src="img/mockup-3.jpg" alt="" width="628" height="437"/>
 </div>
 </div>
-</figure>	
+</figure>
 
 <div class="wrapper-text-description">
 
@@ -265,7 +246,7 @@
 </div>
 
 <div class="post-send">
-<div id="main-post-send"> 
+<div id="main-post-send">
 <div id="title-post-send">Add your comment</div>
 <form id="contact" method="post" action="/onclickprod/formsubmit_op.asp">
 <fieldset>
@@ -276,7 +257,7 @@
 </div>
 </div>
 </div>
-</div>	
+</div>
 -->
             </div>
 
@@ -321,7 +302,7 @@
         <script type="text/javascript" src="/js/fastclick.min.js"></script>
         <script type="text/javascript" src="/js/jquery.flip.min.js"></script>
         <script type="text/javascript" src="/js/jquery.animate-colors-min.js"></script>
-        <script type="text/javascript" src="/js/jquery.animate-shadow-min.js"></script>    
+        <script type="text/javascript" src="/js/jquery.animate-shadow-min.js"></script>
 
         <script>
 
@@ -383,7 +364,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#stripes").stop().animate({scale:'1.2',opacity:'0.5'},300);	
+                    $("#stripes").stop().animate({scale:'1.2',opacity:'0.5'},300);
 
                     event.handled = true;
                 } else {
@@ -397,7 +378,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#stripes").stop().animate({scale:'1',opacity:'1'},300);	
+                    $("#stripes").stop().animate({scale:'1',opacity:'1'},300);
 
                     event.handled = true;
                 } else {
@@ -410,8 +391,8 @@
             var MENUSIDEOPEN = document.getElementById('stripes');
 
             MENUSIDEOPEN.addEventListener('click', function() {
-                $("#main-container-menu").stop().animate({left:'0'},300);	
-            }); 
+                $("#main-container-menu").stop().animate({left:'0'},300);
+            });
 
             /* BOUTON CROSS */
 
@@ -421,7 +402,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#cross-menu").stop().animate({scale:'1.2',opacity:'0.5'},300);	
+                    $("#cross-menu").stop().animate({scale:'1.2',opacity:'0.5'},300);
 
                     event.handled = true;
                 } else {
@@ -435,7 +416,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#cross-menu").stop().animate({scale:'1',opacity:'1'},300);	
+                    $("#cross-menu").stop().animate({scale:'1',opacity:'1'},300);
 
                     event.handled = true;
                 } else {
@@ -453,7 +434,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#stripes").stop().animate({scale:'1.2',opacity:'0.5'},300);	
+                    $("#stripes").stop().animate({scale:'1.2',opacity:'0.5'},300);
 
                     event.handled = true;
                 } else {
@@ -467,7 +448,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#stripes").stop().animate({scale:'1',opacity:'1'},300);	
+                    $("#stripes").stop().animate({scale:'1',opacity:'1'},300);
 
                     event.handled = true;
                 } else {
@@ -483,7 +464,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#oldnew-next").stop().animate({scale:'1.2',opacity:'0.5'},300);	
+                    $("#oldnew-next").stop().animate({scale:'1.2',opacity:'0.5'},300);
 
                     event.handled = true;
                 } else {
@@ -497,7 +478,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#oldnew-next").stop().animate({scale:'1',opacity:'1'},300);	
+                    $("#oldnew-next").stop().animate({scale:'1',opacity:'1'},300);
 
                     event.handled = true;
                 } else {
@@ -513,7 +494,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#oldnew-prev").stop().animate({scale:'1.2',opacity:'0.5'},300);	
+                    $("#oldnew-prev").stop().animate({scale:'1.2',opacity:'0.5'},300);
 
                     event.handled = true;
                 } else {
@@ -527,7 +508,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#oldnew-prev").stop().animate({scale:'1',opacity:'1'},300);	
+                    $("#oldnew-prev").stop().animate({scale:'1',opacity:'1'},300);
 
                     event.handled = true;
                 } else {
@@ -544,7 +525,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#logo").stop().animate({scale:'1.1',opacity:'0.5'},300);	
+                    $("#logo").stop().animate({scale:'1.1',opacity:'0.5'},300);
 
                     event.handled = true;
                 } else {
@@ -558,7 +539,7 @@
                 event.preventDefault();
                 if(event.handled !== true) {
 
-                    $("#logo").stop().animate({scale:'1',opacity:'1'},300);	
+                    $("#logo").stop().animate({scale:'1',opacity:'1'},300);
 
                     event.handled = true;
                 } else {
