--- a/server/views/jobcreationconfirmation.ejs
+++ b/server/views/jobcreationconfirmation.ejs
@@ -9,21 +9,21 @@
         <!-- Behavioral Meta Data -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="icon" type="image/png" href="img/small-logo-01.png">
+        <link rel="icon" type="image/png" href="/img/small-logo-01.png">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,900,900italic,700italic,700,500italic,400italic,500,300italic,300' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-        <link href='add-job.css' rel='stylesheet' type='text/css'>
+        <link href='/add-job.css' rel='stylesheet' type='text/css'>
 
 
         <!--    links for form styling-->
-        <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-        <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-        <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-        <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-        <link rel="stylesheet" type="text/css" href="css-form/util.css">
-        <link rel="stylesheet" type="text/css" href="css-form/main.css">
+        <link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
+        <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
+        <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
+        <link rel="stylesheet" type="text/css" href="/css-form/util.css">
+        <link rel="stylesheet" type="text/css" href="/css-form/main.css">
 
         <!--     google api key -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANNoWpcaXbtXtxCOs5g0RSQfZpRqygsfw&libraries=places"></script>
@@ -103,13 +103,13 @@
         <!-- SCRIPT -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script type="text/javascript" src="js/jquery.scrollTo.min.js"></script>
-        <script type="text/javascript" src="js/jquery.localScroll.min.js"></script>
-        <script type="text/javascript" src="js/jquery-animate-css-rotate-scale.js"></script>
-        <script type="text/javascript" src="js/fastclick.min.js"></script>
-        <script type="text/javascript" src="js/jquery.flip.min.js"></script>
-        <script type="text/javascript" src="js/jquery.animate-colors-min.js"></script>
-        <script type="text/javascript" src="js/jquery.animate-shadow-min.js"></script>
+        <script type="text/javascript" src="/js/jquery.scrollTo.min.js"></script>
+        <script type="text/javascript" src="/js/jquery.localScroll.min.js"></script>
+        <script type="text/javascript" src="/js/jquery-animate-css-rotate-scale.js"></script>
+        <script type="text/javascript" src="/js/fastclick.min.js"></script>
+        <script type="text/javascript" src="/js/jquery.flip.min.js"></script>
+        <script type="text/javascript" src="/js/jquery.animate-colors-min.js"></script>
+        <script type="text/javascript" src="/js/jquery.animate-shadow-min.js"></script>
 
         <script>
 
@@ -339,10 +339,10 @@
         <!-- for form -->
 
         <!--    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>-->
-        <script src="vendor/bootstrap/js/popper.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-        <script src="vendor/select2/select2.min.js"></script>
-        <script src="js-form/main.js"></script>
+        <script src="/vendor/bootstrap/js/popper.js"></script>
+        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/vendor/select2/select2.min.js"></script>
+        <script src="/js-form/main.js"></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
