More job flow stuff

--- a/server/views/account_requester.ejs
+++ b/server/views/account_requester.ejs
@@ -110,7 +110,7 @@
 											<div class="detail-text">
 												<i class="fas fa-users details-icon">
 												</i>
-												3/4 Fulfilled (TEST DATA)
+												<%= jobs[i].claimedBy.length %>/<%= jobs[i].numberRequired %> Fulfilled
 											</div>
 											<div  class="detail-text">
 												<i class="fas fa-stopwatch details-icon-time">
