--- a/server/views/navbar.ejs
+++ b/server/views/navbar.ejs
@@ -16,7 +16,7 @@
         <div id="stripes"></div>
         <a href="/logout"><button class="button">Logout</button></a>
         <% if (user.type == "Seeker") { %>
-        <a href="/reward"><button style="margin-right:10px" class="button" >Job reward</button></a>
+        <a href="/reward"><button style="margin-right:10px; width: 130px;" class="button" >Job reward</button></a>
         <% } else { %>
         <a href="/job/create"><button id="new-job" style="margin-right:10px" class="button">Add a job</button></a>
         <% } %>
