--- a/server/views/account_create.ejs
+++ b/server/views/account_create.ejs
@@ -15,7 +15,7 @@
   <div class="ui middle aligned center aligned grid">
   <div class="column">
     <h2 class="ui teal image header">
-      <img src="img/small-logo.svg" class="image">
+      <img src="/img/small-logo.svg" class="image">
       <div class="content">
         Register for an account
       </div>
