--- a/server/public/account.css
+++ b/server/public/account.css
@@ -1,3 +1,9 @@
+.white .job {
+/*    width: 100%; */
+    object-fit: cover; 
+    height: 180px; 
+}
+
 #user-heading{
 	display: flex;
 	flex-direction: row;
