some pedantic commit

--- a/server/views/navbar.ejs
+++ b/server/views/navbar.ejs
@@ -1,7 +1,7 @@
 <div id="wrapper-header">
 	<div id="main-header" class="object">
 		<div class="logo">
-            Co.unity - <span id="title-description">helping your community help you</span>
+            Co.unity – <span id="title-description">helping your community help you</span>
 <!--            <img src="/img/new/logo.svg" alt="logo platz" style="height: 20%;">-->
 
         </div>
